--- a/index.html
+++ b/index.html
@@ -26,43 +26,7 @@
        
     }
 
-    .offer {
-    display: none;
-    z-index: 1;
-    background: #000000c2;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-.offer img.offer_image {
-    background-color: #0a1440;
-    max-width: 95%;
-    margin: 4rem auto;
-    display: block;
-}
-
-
-
-
-
-    
-#miBoton {
-  width: 200px;
-  height: 100px;
-  border: none;
-  color: white;
-  font-size: 24px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-}
-
-
+   
 
 #tryAgain{
  /* background:#003cff;*/
@@ -87,18 +51,7 @@ background: linear-gradient(to top, #78ffd6, #007991); /* W3C, IE 10+/ Edge, Fir
     box-shadow: 0 0 5px #5aff90, 0 0 5px #5aff90, 0 0 30px #5aff90, 0 0 5px #5aff90;
 }
 
- /* #promo{
-  background-image: url("//static.wplay.co/offers/ofertas/assets/images/spin/50mil-ndb.webp");
-  height: 423px;
-  width: 413px;
-  border-radius: 15px;
-  border: none; 
-  -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both
-  
- } */
+ 
 
  .promo{
   background-image: url("//static.wplay.co/offers/ofertas/assets/images/spin/50mil-ndb.webp");
@@ -106,17 +59,12 @@ background: linear-gradient(to top, #78ffd6, #007991); /* W3C, IE 10+/ Edge, Fir
   width: 413px;
   border-radius: 15px;
   border: none; 
-  vertical-align: middle;
-  align-items: center;
-  justify-content: center;
+  position: absolute; 
+  top: 10%; 
+  left: 21.5%; 
+  transform: translate(-50%, -50%); 
  }
 
- .offer img.offer_image {
-    background-color: #0a1440;
-    max-width: 95%;
-    margin: 4rem auto;
-    display: block;
-}
 
 
 .animated {
@@ -129,15 +77,6 @@ background: linear-gradient(to top, #78ffd6, #007991); /* W3C, IE 10+/ Edge, Fir
 .tada {
     -webkit-animation-name: tada;
     animation-name: tada;
-}
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
-img {
-    vertical-align: middle;
-    border-style: none;
 }
 
 @keyframes tada {
@@ -186,10 +125,6 @@ img {
     }
 }
 
-.tada {
-    -webkit-animation-name: tada;
-    animation-name: tada;
-}
 
 
    
